# chessengine

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
src/: board.cpp  board.h  book.cpp  book.h  eval.cpp  eval.h  main.cpp  movegen.cpp  movegen.h  nnue.cpp  nnue.h  perft.cpp  perft.h  search.cpp  search.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
train/: data.csv  generate.py  train.py
